[package]
name = "LudumDare57"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3", features = ["file_watcher", "bevy_dev_tools"] }
bevy_common_assets = { version = "0.12", features = ["ron"] }
derive-new = "0.7"
behavior-bark = { path = "../behavior-bark", features = ["serde", "bevy"] }
serde = { version = "1.0", features = ["derive"] }
haalka = { version = "0.4", features = ["debug"] }
rand = "0.9"
bevy_ecs_ldtk = "0.11"